--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -10,10 +10,16 @@ spring:
           uri: lb://student-service
           predicates:
             - Path=/api/students/**
+          filters:
+            - RemoveRequestHeader=Cookie
+            - PreserveHostHeader  # Add this line
         - id: details-service
           uri: lb://details-service
           predicates:
             - Path=/api/details/**
+          filters:
+            - RemoveRequestHeader=Cookie  # Remove unwanted headers
+            - PreserveHostHeader  # Ensure headers pass correctly
 eureka:
   client:
     service-url:
