--- a/details-service/src/main/resources/application.yml
+++ b/details-service/src/main/resources/application.yml
@@ -1,8 +1,23 @@
 server:
   port: 8082
+
 spring:
   application:
     name: details-service
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driverClassName: org.h2.Driver
+    username: sa
+    password: password
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: update
+
 eureka:
   client:
     service-url:
