--- a/student-service/src/main/resources/application.yml
+++ b/student-service/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 server:
   port: 8081
+
 spring:
+  application:
+    name: student-service
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
@@ -14,8 +17,16 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
-  eureka:
-    client:
-      service-url:
-        defaultZone: http://localhost:8761/eureka/
+  security:
+    user:
+      name: admin
+      password: admin
+      roles: ADMIN
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+    register-with-eureka: true
+    fetch-registry: true
 
