Moving security to gateway

--- a/details-service/src/main/resources/application.yml
+++ b/details-service/src/main/resources/application.yml
@@ -3,9 +3,9 @@ server:
 
 spring:
   application:
-    name: details-service
+    name: student-details-service
   datasource:
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:mem:detailsdb
     driverClassName: org.h2.Driver
     username: sa
     password: password
@@ -22,3 +22,5 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka/
+    register-with-eureka: true
+    fetch-registry: true
