--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -6,18 +6,11 @@ spring:
     name: api-gateway
   cloud:
     gateway:
-      routes:
-        - id: student-service
-          uri: lb://student-service
-          predicates:
-            - Path=/api/students/**
-          filters:
-            - StripPrefix=1
       globalcors:
         corsConfigurations:
           '[/**]':
             allowedOrigins: '*'
-            allowedMethods: GET,POST,PUT,DELETE # Fix the typo here
+            allowedMethods: GET,POST,PUT,DELETE
             allowedHeaders: '*'
             allowCredentials: false
 
