--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -6,6 +6,11 @@ spring:
     name: api-gateway
   main:
     web-application-type: reactive
+  sleuth:
+    sampler:
+      probability: 1.0
+  zipkin:
+    base-url: http://localhost:9411/
   cloud:
     gateway:
       globalcors:
