--- a/details-service/src/main/resources/application.yml
+++ b/details-service/src/main/resources/application.yml
@@ -45,10 +45,20 @@ logging:
     com.student.detailsservice: DEBUG
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+
 resilience4j:
   circuitbreaker:
     instances:
-      student-details-service:  # Use a relevant name (e.g., studentService, detailsService)
+      studentService:  # Used in StudentDetailsService for calls to Student Service
+        registerHealthIndicator: true
+        slidingWindowSize: 10
+        minimumNumberOfCalls: 5
+        permittedNumberOfCallsInHalfOpenState: 3
+        automaticTransitionFromOpenToHalfOpenEnabled: true
+        waitDurationInOpenState: 5s
+        failureRateThreshold: 50
+        eventConsumerBufferSize: 10
+      detailsService:  # Used in StudentService for calls to Student Details Service
         registerHealthIndicator: true
         slidingWindowSize: 10
         minimumNumberOfCalls: 5
@@ -59,6 +69,9 @@ resilience4j:
         eventConsumerBufferSize: 10
   retry:
     instances:
-      student-details-service:  # Use same name as above
+      studentService:
+        maxAttempts: 3
+        waitDuration: 1s
+      detailsService:
         maxAttempts: 3
         waitDuration: 1s
