--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -9,6 +9,9 @@ spring:
       probability: 1.0
   zipkin:
     base-url: http://localhost:9411/
+  cloud:
+    config:
+      enabled: false
 
 eureka:
   client:
